syntax = "proto3";

package grpc;

service DigiDoc {
	// rpc Login (LoginRequest) returns (LoginResponse) {}
	// rpc Logout (LogoutRequest) returns (LogoutResponse) {}

	rpc Upload (UploadRequest) returns (UploadResponse) {}
	
	rpc Browse (BrowseRequest) returns (BrowseResponse) {}
	// rpc Find (FindRequest) returns (FindResponse) {}

	// rpc Tag (TagRequest) returns (TagResponse) {}
}

// message LoginRequest {
// }

// message LoginResponse {

// }
///////////////////////////

// message LogoutRequest {

// }

// message LogoutResponse {

// }
///////////////////////////

// Upload
message UploadMetaData {
	string name = 3;
	repeated string tags = 4;
	string parentPath = 5;
}

message UploadRequest {
	bytes data = 1;
	UploadMetaData metaData = 2;
}

message UploadResponse {
	fixed64 uuid = 1;
}
///////////////////////////

// Browse
message BrowseRequest {

}

message BrowseResponse {

}
///////////////////////////

// message FindRequest {

// }

// message FindResponse {

// }
///////////////////////////

// message TagRequest {

// }

// message TagResponse {

// }
///////////////////////////